Added versions into import processes
- New parameters have been added into import endpoints
    - delete_old_versions: boolean. Delete items with another version
    - version: string. By default, a 8-bytes random one. Sets the
version of the import process.
- Added import/export testing for Elasticsearch plugin as well
